correction du fichier compute cron task

--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-daily.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-daily.conf
@@ -17,7 +17,7 @@ flux.name = "LOAD_SPARK_KPI_DG_AGREGATIONS_DAILY"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value =-4
+flux.slice-begin-value =-41
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
@@ -46,6 +46,6 @@ flux.has-post-queries = false
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS GET_NNP_MSISDN_9DIGITS"
 flux.inline.exec-queries += "create temporary function GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
-flux.inline.pre-exec-queries+="select if(is_ok=0 and job_name>=18,'OK','NOK') from (select count(*) is_ok from AGG.SPARK_KPIS_DG_TMP where processing_date='###SLICE_VALUE###'  )a,(select count(distinct job_name) job_name from AGG.SPARK_FT_GLOBAL_ACTIVITY_DAILY_MKT_DG where transaction_date='###SLICE_VALUE###' and job_name <>'COMPUTE_KPI_OTARIE_DATA_TRAFFIC')b"
+flux.inline.pre-exec-queries+="select if(is_ok=0 and job_name>=19,'OK','NOK') from (select count(*) is_ok from AGG.SPARK_KPIS_DG_TMP where processing_date='###SLICE_VALUE###'  )a,(select count(distinct job_name) job_name from AGG.SPARK_FT_GLOBAL_ACTIVITY_DAILY_MKT_DG where transaction_date='###SLICE_VALUE###')b"
 flux.exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY_MKT_V2/compute_and_insert_agregations_daily.hql"
 
