update cron ceo

--- a/PROD/CONF/spark-compute-mkt-kpi-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-mkt-kpi-cron-tasks.conf
@@ -19,7 +19,7 @@ cronmanagerId = "013"
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_MKT_V2_IT_ZTE_ADJUSTMENT",
-    cron = "0 0,20,40/20 5-23 * * ?",
+    cron = "0 0,20,40/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-adustment-revenue.conf",
     taskType = "BATCH",
      taskQueue = "compute",
@@ -45,7 +45,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_MKT_V2_FT_CONTRACT_SNAPSHOT",
-    cron = "0 2,22,42/20 5-23 * * ?",
+    cron = "0 2,22,42/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-contract-snapshot-revenue.conf",
     taskType = "BATCH",
      taskQueue = "compute",
@@ -69,7 +69,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_MKT_V2_FT_CREDIT_TRANSFER",
-    cron = "0 4,24,44/20 5-23 * * ?",
+    cron = "0 4,24,44/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-credit-transfer-revenue.conf",
     taskType = "BATCH",
      taskQueue = "compute",
@@ -93,7 +93,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_MKT_V2_CUSTOMER_BASE",
-    cron = "0 6,26,46/20 5-23 * * ?",
+    cron = "0 6,26,46/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-customer-base.conf",
     taskType = "BATCH",
      taskQueue = "compute",
@@ -117,7 +117,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_MKT_V2_FT_DATA_TRANSFER",
-    cron = "0 8,28,48/20 5-23 * * ?",
+    cron = "0 8,28,48/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-data-transfer-revenue.conf",
     taskType = "BATCH",
      taskQueue = "compute",
@@ -141,7 +141,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_MKT_V2_FT_EMERGENCY_DATA",
-    cron = "0 10,30,50/20 5-23 * * ?",
+    cron = "0 10,30,50/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-emergency-data-revenue.conf",
     taskType = "BATCH",
      taskQueue = "compute",
@@ -165,7 +165,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_MKT_V2_FT_A_GPRS_ACTIVITY",
-    cron = "0 12,32,52/20 5-23 * * ?",
+    cron = "0 12,32,52/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-gprs-revenue.conf",
     taskType = "BATCH",
      taskQueue = "compute",
@@ -189,7 +189,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_MKT_V2_FT_GSM_TRAFFIC_REVENUE_DAILY",
-    cron = "0 14,34,54/20 5-23 * * ?",
+    cron = "0 14,34,54/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-gsm-traffic-revenue.conf",
     taskType = "BATCH",
      taskQueue = "compute",
@@ -218,7 +218,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_MKT_V2_FT_OVERDRAFT",
-    cron = "0 16,36,56/20 5-23 * * ?",
+    cron = "0 16,36,56/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-overdraft-revenue.conf",
     taskType = "BATCH",
      taskQueue = "compute",
@@ -242,7 +242,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_MKT_V2_FT_REFILL",
-    cron = "0 18,38,58/20 5-23 * * ?",
+    cron = "0 18,38,58/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-refill-traffic.conf",
     taskType = "BATCH",
      taskQueue = "compute",
@@ -266,7 +266,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_MKT_V2_FT_SUBS_RETAIL_ZEBRA",
-    cron = "0 20,40,0/20 5-23 * * ?",
+    cron = "0 20,40,0/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-subs-retail-zebra-revenue.conf",
     taskType = "BATCH",
      taskQueue = "compute",
@@ -290,7 +290,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_MKT_V2_FT_A_SUBSCRIPTION",
-    cron = "0 22,42,2/20 5-23 * * ?",
+    cron = "0 22,42,2/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-subscription-revenue.conf",
     taskType = "BATCH",
      taskQueue = "compute",
@@ -314,7 +314,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_MKT_V2_UNIQUE_USER",
-    cron = "0 24,44,4/20 5-23 * * ?",
+    cron = "0 24,44,4/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-unique-user.conf",
     taskType = "BATCH",
      taskQueue = "compute",
@@ -339,7 +339,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_MKT_V2_USER_LOCATION",
-    cron = "0 26,46,6/20 5-23 * * ?",
+    cron = "0 26,46,6/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-user-location.conf",
     taskType = "BATCH",
      taskQueue = "compute",
@@ -365,7 +365,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_MKT_PARC_OM",
-    cron = "0 28,48,8/20 5-23 * * ?",
+    cron = "0 28,48,8/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-orange-money-parc-om.conf",
     taskType = "BATCH",
      taskQueue = "compute",
@@ -390,7 +390,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_MKT_OM",
-    cron = "0 30,50,10/20 5-23 * * ?",
+    cron = "0 30,50,10/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-orange-money-revenue.conf",
     taskType = "BATCH",
      taskQueue = "compute",
@@ -414,7 +414,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_MKT_BAL_OM",
-    cron = "0 32,52,12/20 5-23 * * ?",
+    cron = "0 32,52,12/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-orange-money-revenue_bal.conf",
     taskType = "BATCH",
      taskQueue = "compute",
@@ -438,7 +438,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_MKT_PDV_OM",
-    cron = "0 34,54,14/20 5-23 * * ?",
+    cron = "0 34,54,14/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-orange-money-revenue_pdv.conf",
     taskType = "BATCH",
      taskQueue = "compute",
@@ -462,7 +462,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_MKT_V2_FT_OTARIE_DATA_TRAFIC",
-    cron = "0 36,56,16/20 5-23 * * ?",
+    cron = "0 36,56,16/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-otarie-data-trafic.conf",
     taskType = "BATCH",
     taskQueue = "compute",
@@ -487,7 +487,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_DG_AGREGATIONS_DAILY",
-    cron = "0 38,58,18/20 5-23 * * ?",
+    cron = "0 38,58,18/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-daily.conf",
     taskType = "BATCH",
     taskQueue = "compute",
@@ -510,8 +510,32 @@ crontasks +=
 
 crontasks +=
   {
+    instanceId = "LOAD_SPARK_KPI_2020_DG_AGREGATIONS_DAILY",
+    cron = "0 38,58,18/20 0-23 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-daily-2020.conf",
+    taskType = "BATCH",
+    taskQueue = "compute",
+    taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 5 --num-executors 5 --driver-memory 8G --executor-memory 8G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--conf spark.ui.port=51012"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+crontasks +=
+  {
     instanceId = "LOAD_SPARK_KPI_DG_AGREGATIONS_SUPP_REG_INCONNUE",
-    cron = "0 40,0,20/20 5-23 * * ?",
+    cron = "0 40,0,20/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-daily-supp-reg-inconnue.conf",
     taskType = "BATCH",
     taskQueue = "compute",
@@ -536,7 +560,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_DG_AGREGATIONS_WEEKLY",
-    cron = "0 42,2,22/20 5-23 * * ?",
+    cron = "0 42,2,22/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-weekly.conf",
     taskType = "BATCH",
     taskQueue = "compute",
@@ -561,7 +585,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_DG_AGREGATIONS_MONTHLY",
-    cron = "0 44,4,24/20 5-23 * * ?",
+    cron = "0 44,4,24/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-monthly.conf",
     taskType = "BATCH",
     taskQueue = "compute",
@@ -587,7 +611,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_DG_AGREGATIONS_FINAL",
-    cron = "0 46,6,26/20 5-23 * * ?",
+    cron = "0 46,6,26/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-final.conf",
     taskType = "BATCH",
     taskQueue = "compute",
@@ -612,7 +636,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_DG_AGREGATIONS_IN_COMMERCIAL_REGION_FINAL",
-    cron = "0 48,8,28/20 5-23 * * ?",
+    cron = "0 48,8,28/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-in-commercial-region-final.conf",
     taskType = "BATCH",
     taskQueue = "compute",
@@ -636,7 +660,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_DG_AGREGATIONS_IN_NATIONAL_FINAL",
-    cron = "0 50,10,30/20 5-23 * * ?",
+    cron = "0 50,10,30/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-in-national-final.conf",
     taskType = "BATCH",
     taskQueue = "compute",
@@ -660,7 +684,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_REGIONAL_DOM_DASHBOARD",
-    cron = "0 52,12,32/20 5-23 * * ?",
+    cron = "0 52,12,32/20 0-23 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-regional-dom-dashboard.conf",
     taskType = "BATCH",
     taskQueue = "compute",
