--- a/PROD/CONF/BDI/load-spark-ft-a-bdi-ameliore.conf
+++ b/PROD/CONF/BDI/load-spark-ft-a-bdi-ameliore.conf
@@ -18,25 +18,25 @@ flux.name = "LOAD_SPARK_FT_A_BDI_AMELIORE"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -10
-flux.slice-end-value = 0
+flux.slice-begin-value = -8
+flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
 flux.slice-has-state-query=true
 flux.slice-state-query="""
-select  if(count(*)=11,'OK','NOK')
+select  if(count(*)=8,'OK','NOK')
 from dim.dt_dates
-where datecode between date_sub(current_date, 10) and current_date
-    and datecode in (select distinct event_date_plus1 from MON.SPARK_FT_A_BDI_AMELIORE where event_date_plus1 between date_sub(current_date, 10) and current_date)
+where datecode between date_sub(current_date, 8) and date_sub(current_date, 1)
+    and datecode in (select distinct event_date from AGG.SPARK_FT_A_BDI_AMELIORE where event_date between date_sub(current_date, 8) and date_sub(current_date, 1))
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
 select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
-where datecode between date_sub(current_date, 10) and current_date
-    and datecode in (select distinct event_date_plus1 from MON.SPARK_FT_A_BDI_AMELIORE where event_date_plus1 between date_sub(current_date, 10) and current_date)
+where datecode between date_sub(current_date, 8) and date_sub(current_date, 1)
+    and datecode in (select distinct event_date from AGG.SPARK_FT_A_BDI_AMELIORE where event_date between date_sub(current_date, 8) and date_sub(current_date, 1))
 """
 flux.slice-date-format = "yyyy-MM-dd"
 
