--- a/PROD/CONF/BDI/load-spark-ft-a-bdi-b2b.conf
+++ b/PROD/CONF/BDI/load-spark-ft-a-bdi-b2b.conf
@@ -52,7 +52,7 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_A_BDI_B2B/prequery_spark_ft_a_
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
-flux.inline.exec-qCueries += "SET hive.exec.reducers.max=16"
+flux.inline.exec-queries += "SET hive.exec.reducers.max=16"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
