--- a/PROD/CONF/BDI/load-spark-ft-b2b.conf
+++ b/PROD/CONF/BDI/load-spark-ft-b2b.conf
@@ -56,7 +56,7 @@ flux.inline.exec-queries +="truncate table TMP.tt_flotte2"
 flux.inline.exec-queries +="truncate table TMP.tt_flotte3"
 flux.inline.exec-queries +="truncate table TMP.tt_flotte01"
 flux.inline.exec-queries +="truncate table TMP.tt_flotte02"
-flux.inline.exec-queries +="truncate table TMP.tt_flotte02_generique1"
+#flux.inline.exec-queries +="truncate table TMP.tt_flotte02_generique1"
 flux.inline.exec-queries +="truncate table TMP.tt_pm01"
 flux.inline.exec-queries +="truncate table TMP.tt_flotte4_ns"
 flux.inline.exec-queries +="truncate table TMP.tt_flotte4_RCCM"
@@ -72,14 +72,14 @@ flux.inline.exec-queries +="truncate table TMP.tt_flotte9"
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
-flux.inline.exec-qCueries += "SET hive.exec.reducers.max=16"
+flux.inline.exec-queries += "SET hive.exec.reducers.max=16"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte01.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte02.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte02_generique1.hql"
+#flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte02_generique1.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_pm01.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte1.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte2.hql"
