--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-bdi-ameliore.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-bdi-ameliore.conf
@@ -8,8 +8,8 @@ flux.type = "EXPORT"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -40
-flux.slice-end-value = 0
+flux.slice-begin-value = -10
+flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
@@ -21,11 +21,11 @@ flux.hive.has-pre-queries = true
 
 flux.rdms.pre-exec-queries += """
 SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
-(SELECT COUNT(*) NBR FROM MON.FT_A_BDI_AMELIORE   WHERE event_date_plus1 BETWEEN TO_DATE('###SLICE_VALUE### 000000', 'YYYY-MM-DD HH24MISS') AND TO_DATE('###SLICE_VALUE### 235959', 'YYYY-MM-DD HH24MISS'))
+(SELECT COUNT(*) NBR FROM MON.FT_A_BDI_AMELIORE WHERE event_date BETWEEN TO_DATE('###SLICE_VALUE### 000000', 'YYYY-MM-DD HH24MISS') AND TO_DATE('###SLICE_VALUE### 235959', 'YYYY-MM-DD HH24MISS'))
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1, 'OK', 'NOK') FROM
-(SELECT COUNT(*) NBR FROM  MON.SPARK_FT_A_BDI_AMELIORE   WHERE event_date_plus1='###SLICE_VALUE###') A
+(SELECT COUNT(*) NBR FROM  AGG.SPARK_FT_A_BDI_AMELIORE WHERE event_date='###SLICE_VALUE###') A
 """
 
 flux.sqoop.jdbc-connect-uri = "jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL = TCP)(HOST = 172.21.75.133)(PORT = 20303)))(CONNECT_DATA=(SERVICE_NAME = OCMDWH)))"
@@ -33,7 +33,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "select * FROM MON.SPARK_FT_A_BDI_AMELIORE   WHERE event_date_plus1='###SLICE_VALUE###'"
+flux.sqoop.query = "select * FROM AGG.SPARK_FT_A_BDI_AMELIORE WHERE event_date='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_A_BDI_AMELIORE"
 flux.sqoop.export-rdms.dest-table = "MON.FT_A_BDI_AMELIORE"
